gitops/k8s/base/saleor/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          tty: true
          image: ghcr.io/saleor/saleor:3.19
          resources:
            limits:
              cpu: "1"
              memory: "500Mi"
            requests:
              cpu: "0.5"
              memory: "200Mi"
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: api-pv
              mountPath: /app/media
      volumes:
        - name: api-pv
          persistentVolumeClaim:
            claimName: saleor-media-pvc
